gcc/testsuite/rust/rustc/ui/for/for-else-let-else-err_dg.rs
fn main() {
    let _ = for _ in 0..1 {
// { dg-note "" "" { target *-*-* } .-1 }
    } else {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
    };
}

